using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings
{
    
    public static string attackTrigger = "attack";
    public static string isWalk = "isWalk";
    public static string jump = "jump";
    public static string isGrounded = "isGrounded";
    public static string hasTarget ="hasTarget";
    public static string isDeath = "isDeath";
    public static string isIdle = "isIdle";
    public static string isRun = "isRun";
}
